# savecraft.gg

./: .env  .env.local.example  .envrc  .gitignore  .golangci.yml  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Justfile  LICENSE  PRIVACY.md  README.md  buf.gen.yaml  commander-deckbuild-sme-prompt.md  devenv.nix  flake.nix  go.mod  go.sum  package-lock.json  package.json  rust-toolchain.toml  server.json
.github/: CODEOWNERS
docs/: adapters.md  daemon.md  games.md  infrastructure.md  mcp-annotations.md  mcp-design.md  mcp.md  overview.md  plugin-development.md  plugins.md  rimworld.md  roadmap.md  savecraft-architecture.md  submission-test-cases.md  view-design.md  views.md  web.md  worker.md
install/: install.sh  savecraft.service
nix/: magic-data-refresh.nix  mtga-data-refresh.nix  pob-server.nix  pob-source.nix
plugins/d2r/tools/casc-extract/: .gitignore  CMakeLists.txt  main.c
plugins/stellaris/parser/: Cargo.toml
plugins/stellaris/parser/src/: main.rs
plugins/stellaris/parser/src/sections/: diplomacy.rs  economy.rs  exploration.rs  factions.rs  gamestate.rs  geography.rs  leaders.rs  meta.rs  military.rs  mod.rs  overview.rs  planets.rs  progression.rs  species.rs  technology.rs  threats.rs  wars.rs
plugins/stellaris/parser/tests/: parse_save.rs
reference/: .gitignore  Justfile  package.json  tsconfig.json  wrangler.toml
scripts/: build-manifests.ts  capture-ggg-character.sh  create-test-vm.sh  dump-build-response.ts  dump-spot-check-fixture.ts  generate-plugin-manifest.sh  push-ggg-secrets.sh  spot-check.ts  stats.sh  (+1 more)
(+1575 files in other folders)
