[package]
name = "stellaris-parser"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stellaris-parser"
path = "src/main.rs"

[dependencies]
clausewitz-core = { path = "../../../libs/clausewitz-core" }
jomini = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
